# sqlo

./: feats.md  sqlo-design.md
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/auth/: jwt.py
backend/app/engine/data_generator/: generator.py  utils.py
backend/app/engine/exercise_generator/: generator.py  utils.py
backend/app/engine/hint_generator/: utils.py
backend/app/models/: dataset.py  exercise.py  score.py  user.py
backend/app/routers/: datasets.py  exercises.py  feedback.py  leaderboard.py  scores.py  users.py
backend/app/services/: dataset.py  exercise.py  plan.py  score.py
backend/tests/: test_data_generator.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(core)/: layout.tsx
frontend/components/: sql-editor.tsx
frontend/components/auth/: login-form.tsx
frontend/components/dashboard/: score-dashboard.tsx
frontend/components/dataset/: dataset-card.tsx  dataset-create-button.tsx  dataset-exercise.tsx  dataset-exercises-create-button.tsx  dataset-info.tsx  dataset-settings.tsx  dataset-sql-editor.tsx  dataset-tables.tsx  schema-visualizer.tsx
frontend/components/exercise/: community-exercise-card.tsx  exercise-card.tsx  exercise-create-button.tsx  exercise-sql-editor.tsx  exercise-topic.tsx
frontend/components/landing/: Footer.tsx  (+5 more)
frontend/context/: AuthContext.tsx
frontend/hooks/: datasets.ts  exercises.ts  scores.ts  user.ts
frontend/lib/: api.ts  const.ts  const.tsx  supabase.ts  types.ts
(+20 files in other folders)
